Update 'rag9-sep12-1' component image to: quay.io/maysunfaisal/rag9-sep12-1:bb9cace722c0d222722abcee4052a351744e3a7e@sha256:0962040cafe8b84d27ba4d209ffdd10527757518dd52eae35c7918957a6366c7

--- a/components/rag9-sep12-1/overlays/development/deployment-patch.yaml
+++ b/components/rag9-sep12-1/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rag9-sep12-1
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-ai-dev/ai-template-bootstrap-app:latest # use pre-built to bootstrap 
-        name: app-inference 
+        - image: quay.io/maysunfaisal/rag9-sep12-1:bb9cace722c0d222722abcee4052a351744e3a7e@sha256:0962040cafe8b84d27ba4d209ffdd10527757518dd52eae35c7918957a6366c7 # use pre-built to bootstrap 
+          name: app-inference
